# mlops_final_homework

./: .gitignore  Readme.md
1_mlflow/: .env  Makefile  docker-compose.yaml  pyproject.toml
2_airflow/: docker-compose.yaml
2_airflow/data/airflow/dags/firstproj/: first_dag.py
3_lakefs/: docker-compose.yaml
4_jupyterhub/: .env  docker-compose.yaml
5_mlservice/: Dockerfile  docker-compose.yaml  pyproject.toml
5_mlservice/mlapp/: __main__.py  migrate.py  server.py
6_metrics/metrics/: docker-compose.yaml
6_metrics/metrics/configs/: prometheus.yml
6_metrics/mlservice/: .env  pyproject.toml
6_metrics/mlservice/mlapp/: server.py
7_kubernetes/migrate/: job.yaml
7_kubernetes/mlservice/: deployment.yaml  ingress.yaml  service.yaml
7_kubernetes/postgres/: deployment.yaml
8_helm/charts/migrate/: Chart.yaml  values.yaml
8_helm/charts/migrate/templates/: job.yaml
8_helm/charts/mlservice/: Chart.yaml  values.yaml
8_helm/charts/mlservice/templates/: deployment.yaml  ingress.yaml
8_helm/charts/postgres/: Chart.yaml  values.yaml
8_helm/charts/postgres/templates/: deployment.yaml  pvc.yaml  service.yaml
